--- a/src/components/Redes/Redes.module.scss
+++ b/src/components/Redes/Redes.module.scss
@@ -24,15 +24,17 @@
   .phone {
     display: flex;
     justify-content: center;
-  }
-  .redes {
+    align-items: center;
  
+  }
+  .redes { 
     justify-content: center;
   }
   p {
     color: rgb(0, 7, 131);
     padding-left: 5px;
     padding-right: 5px;
-    font-weight: 700;
+    font-weight: 700;    
+  
   }
 }
